# selfdrivingwiki

./: .gitignore  .grdb-pr-body.md  .pr-body-operation-notifier.md  .pr-body.md  .swift-mutation-testing.yml  AGENTS.md  CLAUDE.md  ISSUES.md  Makefile  PLAN.md  PROGRESS.md  Package.resolved  Package.swift  README.md  SWIFTUI-RULES.md  build.sh  details  paseo.json  pr-430-body.md  pr-508-body.md  pr-body-440.md  pr-body-489.md  pr-body-501.md  pr-body-509.md  pr-body-510.md  pr-body-572.md  pr-body-583.md  pr-body-acp-warm-subprocess.md  pr-body-live-ingestion-progress.md  pr-body-phase2.md  pr-body-phase3.md  pr-body-tantivy.md  pr-body.md
.github/: phase4b-pr-body.md  pr-body.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
.polytoken/: skills
Resources/: markdownlint.bundle.js  mermaid.min.js.README  merval.bundle.js  vec0.dylib
Sources/CSQLite/: module.modulemap
Sources/CSqliteVec/: CSqliteVec.c  README.md
Sources/FuzzHarness/: fuzz-dict.txt  main.swift
Sources/PodcastTokenHelper/: main.m
Sources/WikiCtlCore/: AdminCommand.swift  ArgumentParser.swift  BodySource.swift  BookmarkCommand.swift  CLITantivyLegResolver.swift  ChatCommand.swift  DaemonWorkloadClient.swift  DarwinNotifier.swift  FileCommand.swift  LogIndexCommand.swift  PageCommand.swift  SourceCommand.swift  WikiDaemonConnection.swift  WorkspaceCommand.swift
Sources/WikiDaemonContract/: Contract.swift  WikiDaemonError.swift
Sources/WikiFS/: ACPAuthResolver.swift  ACPBackend.swift  (+140 more)
plans/: 604-remove-ingestion-stages.md  615-turn-completion-hang.md  669-mermaid-validator-v11.md  acp-backend-and-permissions.md  acp-diagnostics-733-737.md  acp-multi-provider.md  acp-permissions.md  acp-session-efficiency.md  acp-session-resume.md  acp-spike-findings.md  acp-stall-recovery.md  add-keybindings.md  add-page-editor-default.md  address-bar-omnibox.md  agent-backend-port.md  agent-command-settings.md  agent-settings-tabs.md  agents-two-pane.md  appearance-tab.md  architecture-roadmap.md  architecture.md  background-ingest.md  bookmark-delete-key.md  bookmark-drag-move.md  bookmark-relative-links.md  bookmarks-tree.md  build-environment.md  bun-prereq-check.md  bundle-uv.md  chat-acp-resume.md  chat-and-persistence.md  chat-daemon.md  chat-projection.md  chat-queue.md  chat-quote-anchors.md  chat-references-fix.md  chat-semantic-search.md  chat-summary.md  ci-speedup.md  clean-up-context-menus.md  (+140 more)
prompts/: answer-citation-rule.md  chat.md  digester-prompt.md  extraction-system.md  footnote-conclusions-rule.md  ingest-curator-task.md  ingest-executor.md  ingest-finalizer.md  ingest-planner.md  ingest-single-task.md  ingest-write-rule.md  lint-page-task.md  query-conversation-readonly.md  query-conversation-readwrite.md  query-task.md  system-prompt-default.md  wiki-index-default.md  wiki-tree-render.md
scripts/: make-icon.swift
signing/: README.md  com.selfdrivingwiki.wikid.plist  local.config.example  setup.sh  wikid.entitlements
tmp/: pr-197-body.md  pr-283-body.md  pr-body-4a.md  pr-body.md
tools/minilm-convert/: convert.py  pyproject.toml  validate.py
tools/minilm-prepare/: download.py  pyproject.toml  validate.py
tools/pdf2md/: AGENTS.md  README.md  pdf2md  pyproject.toml  test-pipeline
tools/pdf2md/tests/: conftest.py  test_integration.py  test_pdf2md.py  test_vlm.py
tools/podcast-transcript/: .gitignore  README.md  podcast-transcript  pyproject.toml
tools/podcast-transcript/tests/: conftest.py  test_integration.py  test_podcast_transcript.py
tools/youtube-transcript/: .gitignore  README.md  pyproject.toml  youtube-transcript
tools/youtube-transcript/tests/: conftest.py  test_youtube_transcript.py
user-guide/: chat.md  getting-started.md  organizing-and-managing.md  pages-and-links.md  sources-and-ingestion.md
(+921 files in other folders)
