[project]
name = "minilm-convert"
version = "0.1.0"
description = "Convert sentence-transformers/all-MiniLM-L6-v2 to a CoreML .mlpackage for on-device embedding."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "coremltools>=8.0",
    "numpy>=2.5.0",
    "scipy>=1.10",
    "sentence-transformers>=3.0",
    "torch>=2.12.1",
    "transformers>=5.12.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
