[project]
name = "minilm-prepare"
version = "0.1.0"
description = "Download + validate the MLX all-MiniLM-L6-v2-bf16 model for on-device embeddings."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "huggingface-hub>=1.21.0",
    "mlx>=0.31.2",
    "mlx-embeddings>=0.1.0",
    "numpy>=2.5.0",
    "scipy>=1.10",
    "sentence-transformers>=5.6.0",
]
